Try to brutally patch the system to work with Java16